[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boat/Boat.png" type="Texture" id=1]
[ext_resource path="res://Boat/Boat.gd" type="Script" id=2]
[ext_resource path="res://Boat/Sail.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 18.0

[node name="Boat" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 18.0 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hull" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -16 )

[node name="Sail" type="Sprite" parent="Hull"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -16 )

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PortLimit1" type="Position2D" parent="."]
position = Vector2( 5, -9 )

[node name="PortLimit2" type="Position2D" parent="."]
position = Vector2( 18, -9 )

[node name="StarboardLimit1" type="Position2D" parent="."]
position = Vector2( 5, 9 )

[node name="StarboardLimit2" type="Position2D" parent="."]
position = Vector2( 18, 9 )

[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]
